# erp-api

./: .env  .gitignore  Cargo.toml  README.md  deploy-ovh.sh  deploy.sh  todo
excel_templates/: BM0271 订单 AM特别客人.xlsx  BM0549B0640（4）.xlsx  L1004.xlsx  L1005.xlsx  L1006客人-XG0368手工返单.xlsx  XU0098返单.xlsx
migrations/: 20230803055302_item.sql  20230809053050_db.down.sql  20230809053050_db.up.sql
schema/: new_schema.sql  schema.sql
src/: config.rs  constants.rs  error.rs  macros.rs  main.rs
src/common/: datetime.rs  hashmap.rs  log.rs  mod.rs  string.rs
src/dto/: dto_account.rs  dto_customer.rs  dto_goods.rs  dto_orders.rs  dto_progress.rs  dto_stats.rs  mod.rs
src/excel/: excel_order_info.rs  excel_order_parser.rs  mod.rs  order_excel.rs  order_template_1.rs  order_template_2.rs  order_template_3.rs  order_template_4.rs  order_umya_excel.rs  parse_order_template_1.rs  parse_order_template_2.rs  parse_order_template_3.rs  parse_order_template_4.rs  process_order_excel_goods.rs  process_order_excel_goods_no_with_sku_no.rs  test_order_excel.py
src/handler/: mod.rs  routes_account.rs  routes_customer.rs  routes_excel.rs  routes_goods.rs  routes_healthcheck.rs  routes_hello.rs  routes_item.rs  routes_login.rs  routes_material.rs  routes_order.rs  routes_progress.rs  routes_stats.rs  routes_upload.rs
src/middleware/: auth.rs
src/model/: account.rs  customer.rs  goods.rs  item.rs  mod.rs  order.rs  progress.rs  sku.rs
src/response/: api_response.rs
src/service/: goods_service.rs  mod.rs
src/web/: mod.rs  routes_hello.rs  routes_item.rs  (+2 more)
tests/: quick_dev.rs
