[package]
name = "erp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
axum-extra = { version = "0.7.7", features = ["cookie"]}
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ['fs', 'cors'] }

uuid = { version = "1.4.1", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"

serde = { version = "1.0.180", features = ['derive'] }
serde_json = "1.0.104"

thiserror = "1.0.44"

time = "0.3.25"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

clap = { version = "4.3.19", features = ["derive"] }
dotenv = "0.15.0"

# read excel
# calamine = {version = "0.21.2", features = ["picture"]}
# calamine does not support reading image from cell
# and then i choose umya-spreadsheet
umya-spreadsheet = "1.0.0"

[dev-dependencies]
anyhow = "1.0.72"
httpc-test = "0.1.5"
